@@ -1,7 +1,11 @@
 /***********************************************************************
 X3 ChangeLog
 
-2009-01-24  Alex Schumann  <rubin@afternet.org>
+2009-01-26  Alex Schumann  <rubin@afternet.org>
+
+	* src/plugins/annoy/plugin.py: new version of test plugin
+
+2009-01-25  Alex Schumann  <rubin@afternet.org>
 
 	* Makefile.am: forgot to copy modpython.py where it goes.
 
